Criando o card de cadastro de prontuários

--- a/src/Pages/CadastrarPacientes/style.css
+++ b/src/Pages/CadastrarPacientes/style.css
@@ -1,2 +1,3 @@
 @import '../../Components/Card/Card.css';
 @import '../../Components/Title/Title.css';
+@import '../../Components/Button/Button.css';
