--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: rgba(250, 243, 218, 0.842);
+  background-color: whitesmoke;
   height: 100vh;
 }
 
