--- a/src/Pages/CadastrarPacientes/style.css
+++ b/src/Pages/CadastrarPacientes/style.css
@@ -1,3 +1,4 @@
 @import '../../Components/Card/Card.css';
 @import '../../Components/Title/Title.css';
 @import '../../Components/Button/Button.css';
+@import '../../Components/Form/Form.css';
