--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,3 +1,4 @@
+/* Class actions adicionado ao botão "Cadastrar Paciente" */
 .actions {
     width: 100%;
     display: flex;
@@ -25,6 +26,7 @@
     border-radius: .7em;
     font-size: .9em;
     padding: .5em;
+    margin: 5px;
 }
 
 .submit {
@@ -36,4 +38,5 @@
     border-radius: .7em;
     font-size: .9em;
     padding: .5em;
+    margin: 5px;
 }
