--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -3,6 +3,7 @@
     overflow: hidden;
     background-color: white;
     border-radius: 2em;
+    border: 2px solid #3498db;
     margin: 1em;
     padding: 1em;
 }
