--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,6 +7,8 @@ header {
     background-color: rgb(93, 148, 184);
     border: 1px solid rgb(93, 148, 184);
     font-size: 2em;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 0 0 0.5em 0.5em;
 }
 
@@ -20,6 +22,7 @@ header {
     display: flex;
     width: 100%;
     font-size: 1em;
+    font-weight: bold;
     cursor: pointer;
     align-items: center;
     justify-content: center;
