--- a/src/Pages/CadastrarProntuarios/style.css
+++ b/src/Pages/CadastrarProntuarios/style.css
@@ -1,4 +1,4 @@
 @import '../../Components/Card/Card.css';
-@import '../../Components/Table/Table.css';
 @import '../../Components/Title/Title.css';
 @import '../../Components/Button/Button.css';
+@import '../../Components/Form/Form.css';
